--- a/analyses/jtadros_questions_3_5.ipynb
+++ b/analyses/jtadros_questions_3_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "576de6d0",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,12 @@
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
     "from src.analysis_helpers import side_by_side_bar_plot, get_value_counts, distribution_plots\n",
-    "from scipy.stats import mannwhitneyu"
+    "from scipy.stats import mannwhitneyu, kstest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "996e2a7b",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "6ff7bf38",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "f15ccf19",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "76764da3",
    "metadata": {},
    "outputs": [
@@ -173,6 +173,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6266c3d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KstestResult(statistic=np.float64(0.09796552051512596), pvalue=np.float64(0.05608204072286342), statistic_location=np.float64(3.0), statistic_sign=np.int8(-1))\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = kstest(shrek_reviews_female.dropna(), shrek_reviews_male.dropna())\n",
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "faf87dbc",
    "metadata": {},
@@ -191,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "743da532",
    "metadata": {},
    "outputs": [
@@ -231,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "3a8ea18e",
    "metadata": {},
    "outputs": [
@@ -274,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "05fa06cb",
    "metadata": {},
    "outputs": [
@@ -287,7 +306,48 @@
     }
    ],
    "source": [
-    "U1, p = mannwhitneyu(lion_king_reviews_not_only_child.dropna(), lion_king_reviews_only_child.dropna())\n",
+    "#two-tailed mann whitney u\n",
+    "U1, p = mannwhitneyu(lion_king_reviews_only_child.dropna(), lion_king_reviews_not_only_child.dropna())\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "72dd3610",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.978419092554931\n"
+     ]
+    }
+   ],
+   "source": [
+    "#one-tailed mann whitney u - \n",
+    "U1, p = mannwhitneyu(lion_king_reviews_only_child.dropna(), lion_king_reviews_not_only_child.dropna(), alternative=\"greater\")\n",
+    "print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "2509c592",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.021599364978414245\n"
+     ]
+    }
+   ],
+   "source": [
+    "#one-tailed mann whitney u - \n",
+    "U1, p = mannwhitneyu(lion_king_reviews_only_child.dropna(), lion_king_reviews_not_only_child.dropna(), alternative=\"less\")\n",
     "print(p)"
    ]
   }
